--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,43 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewBag.Title = "Inicio";
 }
 
-<div>
-    <h1>Index</h1>
-    <p>Bienvenidos al sitio web de NombreProyecto</p>
+<div class="text-center">
+    <img src="~/images/logo.png" alt="Logo del juego" style="height:100px;" />
+    <h1>AhorcadORT</h1>
+    <form asp-action="Comenzar" method="post" class="form-inline justify-content-center">
+        <input type="text" name="username" placeholder="Nombre de usuario" required class="form-control mr-2" />
+        <select name="dificultad" class="form-control mr-2">
+            <option value=1>Fácil</option>
+            <option value=2>Intermedio</option>
+            <option value=3>Difícil</option>
+            <option value=4>Experto</option>
+        </select>
+        <button type="submit" class="btn btn-primary">Comenzar juego</button>
+    </form>
+    <h3>Ranking de jugadores</h3>
+    @if (ViewBag.Jugadores != null && ViewBag.Jugadores.Count > 0)
+    {
+        <table class="table table-striped table-bordered mt-4">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Intentos</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (Usuario jugador in ViewBag.Jugadores)
+                {
+                    <tr>
+                        <td>@jugador.Nombre</td>
+                        <td>@jugador.CantidadIntentos</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p>No hay jugadores registrados aún.</p>
+    }
 </div>
