--- a/Views/Home/Juego.cshtml
+++ b/Views/Home/Juego.cshtml
@@ -12,7 +12,6 @@
     </div>
     <form id="formJuego" autocomplete="off">
         <input type="hidden" id="palabraReal" value="@ViewBag.Palabra.Texto" />
-        <input type="hidden" id="intentos" name="intentos" value="@ViewBag.Intentos" />
         <input type="text" id="inputLetraPalabra" class="form-control d-inline-block w-auto" placeholder="Letra o palabra" required />
         <button type="button" class="btn btn-success" id="btnArriesgarLetra" onclick="ArriesgarLetra()">Arriesgar Letra</button>
         <button type="button" class="btn btn-info" id="btnArriesgarPalabra" onclick="ArriesgarPalabra()">Arriesgar Palabra</button>
@@ -22,6 +21,7 @@
         <p id="letrasArriesgadas"></p>
     </div>
     <form id="finJuego" action='@Url.Action("FinJuego", "Home")' method="post">
+    <input type="hidden" name="intentos" id="intentosFinal" value="@ViewBag.Intentos" />
     <button type="submit" class="btn btn-primary">Terminar juego</button>
     </form>
 
