funciona todo menos los intentos

--- a/Views/Home/Juego.cshtml
+++ b/Views/Home/Juego.cshtml
@@ -1,7 +1,7 @@
 @{
     ViewBag.Title = "Juego";
 }
-<div class="juego-container">
+<div class="juego-container" id="div-juego">
     <h2>Bienvenido, @ViewBag.Username</h2>
     <h4>¡Adivina la palabra!</h4>
     <div id="palabra" class="palabra-grande">
