--- a/Views/Home/Juego.cshtml
+++ b/Views/Home/Juego.cshtml
@@ -22,7 +22,7 @@
     </div>
     <form id="finJuego" action='@Url.Action("FinJuego", "Home")' method="post">
     <input type="hidden" id="intentos" name="intentos" value="@ViewBag.Intentos" />
-    <button type="submit" class="btn btn-primary">Terminar juego</button>
+    <button type="submit" class="btn btn-primary" hidden>Terminar juego</button>
     </form>
 
 </div>
